--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML 5 Boilerplate</title>
+    <title>GitHub Issues Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="index.js"></script>
-    <table id="rep"></table>
+    <main>
+      <table id="rep"></table>
+      
+      <script src="index.js"></script>
+      <button id = "pgnum" onclick="display()">1</button>
+      <button id = "pgnum" onclick="display()" >2</button>
+      <button id = "pgnum" onclick="display()">3</button>
+      <button id = "pgnum" onclick="display()" >4</button> 
+      <button id = "pgnum" onclick="display()">5</button>
+      <button id = "pgnum" onclick="display()">6</button> 
+      <button id = "pgnum" onclick="display()">7</button>
+      <button id = "pgnum" onclick="display()" >8</button> 
+      <button id = "pgnum" onclick="display()">9</button>
+      <button id = "pgnum" onclick="display()" >10</button>
+      <button id = "pgnum" onclick="display()">11</button>
+      <button id = "pgnum" onclick="display()">12</button>
+      <button id = "pgnum" onclick="display()">13</button>
+      <button id = "pgnum" onclick="display()">14</button> 
+      <button id = "pgnum" onclick="display()">15</button>
+      <button id = "pgnum" onclick="display()">16</button> 
+      <button id = "pgnum" onclick="display()">17</button>
+      <button id = "pgnum" onclick="display()" >18</button> 
+      <button id = "pgnum" onclick="display()">19</button>
+      <button id = "pgnum" onclick="display()">20</button>
+    </main>
   </body>
 </html>
