Fixed button OnClick Function

--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
   <body>
     <main>
       <table id="rep"></table>
-      
+      <button id = "pgnum">1</button>
+      <button id = "pgnum" >2</button>
+      <button id = "pgnum">3</button>
+      <button id = "pgnum" >4</button>
+      <button id = "pgnum">5</button>
+      <button id = "pgnum">6</button>
+      <button id = "pgnum">7</button>
+      <button id = "pgnum" >8</button>
+      <button id = "pgnum">9</button>
+      <button id = "pgnum" >10</button>
+      <button id = "pgnum">11</button>
+      <button id = "pgnum">12</button>
+      <button id = "pgnum">13</button>
+      <button id = "pgnum">14</button>
+      <button id = "pgnum">15</button>
+      <button id = "pgnum">16</button>
+      <button id = "pgnum">17</button>
+      <button id = "pgnum" >18</button>
+      <button id = "pgnum">19</button>
+      <button id = "pgnum">20</button>
       <script src="index.js"></script>
-      <button id = "pgnum" onclick="display()">1</button>
-      <button id = "pgnum" onclick="display()" >2</button>
-      <button id = "pgnum" onclick="display()">3</button>
-      <button id = "pgnum" onclick="display()" >4</button> 
-      <button id = "pgnum" onclick="display()">5</button>
-      <button id = "pgnum" onclick="display()">6</button> 
-      <button id = "pgnum" onclick="display()">7</button>
-      <button id = "pgnum" onclick="display()" >8</button> 
-      <button id = "pgnum" onclick="display()">9</button>
-      <button id = "pgnum" onclick="display()" >10</button>
-      <button id = "pgnum" onclick="display()">11</button>
-      <button id = "pgnum" onclick="display()">12</button>
-      <button id = "pgnum" onclick="display()">13</button>
-      <button id = "pgnum" onclick="display()">14</button> 
-      <button id = "pgnum" onclick="display()">15</button>
-      <button id = "pgnum" onclick="display()">16</button> 
-      <button id = "pgnum" onclick="display()">17</button>
-      <button id = "pgnum" onclick="display()" >18</button> 
-      <button id = "pgnum" onclick="display()">19</button>
-      <button id = "pgnum" onclick="display()">20</button>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
+
